applications/eventscheduler/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  labels:
    app: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: scheduler
    spec:
      containers:
      - name: scheduler
        image: "ghcr.io/scheduler@sha256:952489da0b346752408ad7758963b0156b6a46f099d944c394f21a708395772b"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 64Mi
        imagePullSecrets:
        - ghcrcreds
