applications/eventscheduler/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scheduler
  labels:
    app: scheduler
    service: scheduler
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: scheduler
    version: v1
